--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-</head>
+    <script src="https://kit.fontawesome.com/23c464c4dc.js" crossorigin="anonymous"></script>
+      </head>
 <body>
   <app-root></app-root>
 </body>
